fixed paragraph tag that was not showing on main site

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -86,7 +86,7 @@ em{
          text-align: center;
          color: white;
          margin: 200px;
-         font-size: 30px
+         font-size: 25px
 }
 @media only screen and (max-width: 600px) {
   .column {
@@ -94,4 +94,7 @@ em{
     text-align: center;
 
   }
+}
+.white{
+       color: white;
 }
